Fix line wrap

--- a/src/styles/PokeDetails.css
+++ b/src/styles/PokeDetails.css
@@ -90,6 +90,10 @@
   margin-bottom: 5px;
 }
 
+.one-liner {
+  white-space: pre;
+}
+
 @media all and (min-width: 576px) {
   .details-modal-content {
     display: grid;
